[package]
name = "hours"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version="0.30.0", default-features=false, features=["glow"] }
egui_extras = "0.30.0"
chrono = "0.4.39"
dirs-next = "2.0.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
lto = "fat"       # Enable full link-time optimization.
codegen-units = 1 # Use only 1 codegen-unit to enable full optimizations.
panic = "abort"   # Why would we need to catch panics.
strip = true      # Strip symbols from the binary.
